--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,6 @@
 @tailwind utilities;
 
 * {
-    font-family: 'Montserrat', sans-serif;
-    scroll-behavior: smooth;
+  font-family: "Montserrat", sans-serif;
+  scroll-behavior: smooth;
 }
